# text2num-rs

./: Cargo.toml  LICENSE  README.md
.circleci/: config.yml
src/: digit_builder.rs  digit_string.rs  error.rs  lib.rs  tokenizer.rs  word_to_digit.rs
src/lang/: en.rs  fr.rs  mod.rs
src/lang/de/: mod.rs  vocabulary.rs
src/lang/en/: mod.rs  vocabulary.rs
src/lang/es/: mod.rs  vocabulary.rs
src/lang/fr/: mod.rs  vocabulary.rs
src/lang/it/: mod.rs  vocabulary.rs
src/lang/nl/: mod.rs  vocabulary.rs
src/lang/pt/: mod.rs  vocabulary.rs
