[package]
name = "text2num"
version = "2.0.0"
authors = ["Allo-Media <contact@allo-media.fr>"]
edition = "2021"
license = "MIT"
description = "Parse and convert numbers written in English, Spanish or French into their digit representation."
keywords = ["French", "Spanish", "English", "NLP", "words-to-numbers"]
categories = ["text-processing"]
repository = "https://github.com/allo-media/text2num-rs"
readme = "README.md"
exclude = [".circleci", ".gitignore"]


[dependencies]
phf = { version = "0.8", features = ["macros"] }
