[package]
name = "text2num"
version = "2.5.2"
authors = ["Allo-Media <contact@allo-media.fr>"]
edition = "2021"
license = "MIT"
description = "Parse and convert numbers written in English, Dutch, Spanish, German, Italian or French into their digit representation."
keywords = ["NLP", "words-to-numbers"]
categories = ["text-processing"]
repository = "https://github.com/allo-media/text2num-rs"
readme = "README.md"
exclude = [".circleci", ".gitignore"]


[dependencies]
phf = { version = "0.8", features = ["macros"] }
bitflags = "1.3"
daachorse = "1"
