[package]
name = "text2num"
version = "2.6.5"
authors = ["Allo-Media <contact@allo-media.fr>"]
edition = "2024"
license = "MIT"
description = "Parse and convert numbers written in English, Dutch, Spanish, Portuguese, German, Italian or French into their digit representation."
keywords = ["NLP", "words-to-numbers"]
categories = ["text-processing"]
repository = "https://github.com/allo-media/text2num-rs"
readme = "README.md"
exclude = [".circleci", ".gitignore"]

[features]
default = ["all_languages", "std"]
std = ["phf/std"]

# Languages
de = []
en = []
es = []
fr = []
it = []
nl = []
pt = []
all_languages = [
    "de",
    "en",
    "es",
    "fr",
    "it",
    "nl",
    "pt",
]

[dependencies]
phf = { version = "0.8", default-features = false, features = ["macros"] }
bitflags = "1.3"
daachorse = "1"
